--- a/lib/auth_app_web/templates/layout/app.html.eex
+++ b/lib/auth_app_web/templates/layout/app.html.eex
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <%= render AuthAppWeb.SharedView, "navbar.html" %>
+    <%= render AuthAppWeb.SharedView, "navbar.html", conn: @conn %>
     <main role="main" class="container">
       <%= render @view_module, @view_template, assigns %>
     </main>
