--- a/lib/auth_app_web/templates/page/index.html.eex
+++ b/lib/auth_app_web/templates/page/index.html.eex
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
   <div class="col-md-8">
-    <div class="card text-center mt-5">
-      <div class="card-header">
+    <div class="card mt-5">
+      <div class="card-header text-center">
         <h3>Authenticate</h3>
       </div>
       <div class="card-body">
@@ -16,6 +16,10 @@
           <div class="form-group">
             <%= password_input f, :password, class: "form-control", placeholder: "Password"%>
           </div>
+
+          <p>
+            <%= link "Don't have an account yet?", to: Routes.page_path(@conn, :registration) %>
+          </p>
 
           <%= submit "Login", class: "btn btn-primary btn-block"%>
         <% end %>
